--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 body {
   font-family: "Roboto Mono";
-  font-size: 12px;
+  font-size: 14px;
   padding: 20px;
   display: flex;
   justify-content: center;
@@ -20,7 +20,7 @@ body {
 
 @media only screen and (max-width: 1200px) {
   body {
-    font-size: 14px;
+    font-size: 16px;
   }
 }
 
@@ -32,7 +32,7 @@ body {
 
 .hidden-box {
   width: 25%;
-  height: 100vh;
+
   left: 0;
   top: 0;
   background-color: rgb(255, 255, 234);
@@ -50,9 +50,14 @@ body {
   }
 }
 
-@media only screen and (min-width: 650px) {
+@media only screen and (max-width: 650px) {
   .hidden-box {
-    width: 45%;
+    width: 55%;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .hidden-box {
+    width: 100%;
   }
 }
 
@@ -71,7 +76,7 @@ body {
   font-size: 2rem;
   top: 0.3rem;
   right: 1rem;
-  /* color: red; */
+
   cursor: pointer;
 }
 
@@ -122,7 +127,12 @@ body {
 @media only screen and (max-width: 1000px) {
   .half-box {
     width: 100%;
-    height: 40vh;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .half-box {
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
 
@@ -149,6 +159,8 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
 }
 
 .welcome-msg-box {
@@ -220,6 +232,12 @@ body {
   font-size: 20px;
 }
 
+@media screen and (max-width: 1000px) {
+  .day {
+    font-size: 25px;
+  }
+}
+
 .day:hover {
   color: blue;
   opacity: 1;
@@ -232,12 +250,18 @@ body {
   height: 100%;
   width: 100%;
   display: flex;
-
   position: relative;
-
   justify-content: center;
   align-items: center;
+  flex-direction: row;
 }
+
+@media (max-width: 600px) {
+  .timer-box {
+    flex-direction: column;
+  }
+}
+
 .timer {
   z-index: 5;
   padding: 15px;
@@ -247,9 +271,27 @@ body {
   text-align: center;
 }
 
-@media only screen and (max-width: 1000px) {
+@media screen and (max-width: 1000px) {
   .timer {
     width: 30%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .timer {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .timer {
+    margin: 15px;
+    width: 50%;
+  }
+}
+@media screen and (max-width: 417px) {
+  .timer {
+    width: 70%;
   }
 }
 
@@ -270,6 +312,16 @@ body {
     width: 30%;
   }
 }
+@media screen and (max-width: 600px) {
+  .pomodoro-counter-box {
+    width: 50%;
+  }
+}
+@media screen and (max-width: 417px) {
+  .pomodoro-counter-box {
+    width: 70%;
+  }
+}
 
 .counter-title {
   margin-bottom: 12px;
@@ -286,26 +338,28 @@ body {
 .counter-button {
   /* color: red; */
   background: none;
-  padding: 3px;
+  padding: 6px;
   border: 1px solid;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 9px;
+  font-size: 12px;
+  margin: 3px;
 }
 
 /* TODO APP */
 .todo-app-outside {
-  /* clip-path: polygon(0 6%, 6% 0%, 24% 0%, 30% 6%, 70% 6%, 70% 100%, 0% 100%);
-  background-color: red; */
   width: 100%;
   padding: 3px;
   padding-right: 5px;
 }
 
-.todo-app {
-  /* clip-path: polygon(0 6%, 6% 0%, 24% 0%, 30% 6%, 70% 6%, 70% 100%, 0% 100%);
-  background-color: #ffffea; */
+@media screen and (max-width: 600px) {
+  .todo-app-outside {
+    margin-top: 35px;
+  }
+}
 
+.todo-app {
   height: 100%;
   width: 100%;
   padding: 15px;
@@ -313,6 +367,7 @@ body {
   justify-items: center;
   border: 1px solid red;
   border-radius: 12px;
+  text-align: center;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -334,14 +389,20 @@ body {
   align-items: center;
 }
 
+@media screen and (max-width: 417px) {
+  .todo-row {
+    flex-direction: column;
+  }
+}
+
 input,
 .todo-row button {
   background: transparent;
   border: 1px solid red;
   border-radius: 7px;
-  font-size: 10px;
+
   color: red;
-  padding: 2px;
+  padding: 6px;
   margin: 2px;
 }
 
@@ -354,10 +415,10 @@ input,
   text-align: center;
 }
 
-.todo-row button {
+/* .todo-row button {
   width: 30px;
   color: green;
-}
+} */
 
 #button-add:hover {
   color: green;
@@ -375,10 +436,21 @@ input,
 
 ul li {
   list-style: none;
-  font-size: 10px;
+  font-size: 12px;
   position: relative;
   padding: 4px 0px 4px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1200px) {
+  ul li {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 800px) {
+  ul li {
+    font-size: 16px;
+  }
 }
 
 ul li::before {
