--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ body {
 .reset-button,
 .counter-button {
   /* color: red; */
-  background: none;
+  background: transparent;
   padding: 6px;
   border: 1px solid;
   border-radius: 5px;
